--- a/docs/index-HAL.asciidoc
+++ b/docs/index-HAL.asciidoc
@@ -1,64 +1,70 @@
 
 = Hardware Abstract Layer
 
-:leveloffset: 1
+:leveloffset: +1
 
-link:../src/hal/intro.asciidoc[HAL Intro]
+include::hal/intro.asciidoc[]
 
-link:../src/hal/basic_hal.asciidoc[Basic HAL]
+include::hal/basic_hal.asciidoc[]
 
-link:../src/hal/tutorial.asciidoc[HAL Tutorial]
+include::hal/tutorial.asciidoc[]
 
-link:../src/hal/hal-examples.asciidoc[HAL examples]
+include::hal/hal-examples.asciidoc[]
 
-link:../src/hal/general_ref.asciidoc[HAL General reference]
+include::hal/general_ref.asciidoc[]
 
-link:../src/hal/parallel_port.asciidoc[Parallel Port]
+include::hal/parallel_port.asciidoc[]
 
-link:../src/hal/components.asciidoc[HAL Components]
+include::hal/components.asciidoc[]
 
 link:index-instantiated-components.asciidoc[HAL Instantiated Component Man Pages]
 
-link:../src/hal/rtcomps.asciidoc[rtcomps]
+include::hal/rtcomps.asciidoc[]
 
-link:../src/hal/halmodule.asciidoc[halmodule]
+include::hal/halmodule.asciidoc[]
 
-link:../src/hal/canonical-devices.asciidoc[Canonical Services]
+include::hal/canonical-devices.asciidoc[]
 
-link:../src/hal/tools.asciidoc[Tools]
+include::hal/tools.asciidoc[]
 
-link:../src/hal/halshow.asciidoc[Halshow]
+include::hal/halshow.asciidoc[]
 
-=== Developing
+:leveloffset: -1
+
+== Developing
+
+:leveloffset: +1
 
 link:developing/writing-components.asciidoc[Writing HAL Components]
 
-link:../src/hal/instcomp.asciidoc[instcomp]
+include::hal/instcomp.asciidoc[]
 
-link:../src/hal/comp.asciidoc[comp]
+include::hal/comp.asciidoc[]
 
-:leveloffset: 0
+:leveloffset: -1
 
 = Hardware Drivers
 
-:leveloffset: 1
+:leveloffset: +1
 
-link:../src/drivers/AX5214H.asciidoc[AX5214H]
+include::drivers/AX5214H.asciidoc[]
 
-link:../src/drivers/GS2.asciidoc[GS2]
+include::drivers/GS2.asciidoc[]
 
-link:../src/drivers/VFS11.asciidoc[VFS11]
+include::drivers/VFS11.asciidoc[]
 
-link:../src/drivers/hostmot2.asciidoc[hostmot2]
+include::drivers/hostmot2.asciidoc[]
 
-link:../src/drivers/motenc.asciidoc[motenc]
+include::drivers/motenc.asciidoc[]
 
-link:../src/drivers/opto22.asciidoc[opto22]
+include::drivers/opto22.asciidoc[]
 
-link:../src/drivers/pico_ppmc.asciidoc[pico_ppmc]
+include::drivers/pico_ppmc.asciidoc[]
 
-link:../src/drivers/pluto_p.asciidoc[pluto_p]
+include::drivers/pluto_p.asciidoc[]
 
-link:../src/drivers/servo_to_go.asciidoc[servo_to_go]
+include::drivers/servo_to_go.asciidoc[]
 
-link:../src/drivers/GM.asciidoc[GM]
+include::drivers/GM.asciidoc[]
+
+:leveloffset: -1
