--- a/docs/config/pncconf.asciidoc
+++ b/docs/config/pncconf.asciidoc
@@ -1,3 +1,6 @@
+
+:imagesdir: config/images
+
 = Mesa Configuration Wizard
 
 [[cha:PNCconf-wizard]]
@@ -36,7 +39,7 @@ Step by Step Instructions
 
 .PnCConf Splash
 
-image::images/pncconf-splash.png[]
+image::pncconf-splash.png[]
 
 == Create or Edit
 
@@ -56,7 +59,7 @@ config name.
 
 .PnCConf Basic
 
-image::images/pncconf-basic.png[]
+image::pncconf-basic.png[]
 
 Machine Basics::
 If you use a name with spaces PNCconf will replace the spaces with underscore 
@@ -187,7 +190,7 @@ overrides.
 
 .GUI External
 
-image::images/pncconf-external.png[]
+image::pncconf-external.png[]
 
 If you select a Joystick for jogging, You will need it always connected for Machinekit 
 to load. To use the analog sticks for useful jogging you probably need to add 
@@ -238,7 +241,7 @@ Here you can set defaults for the display screens, add virtual control panels
 
 .GUI Configuration
 
-image::images/pncconf-gui.png[]
+image::pncconf-gui.png[]
 
 Frontend GUI Options::
 
@@ -356,7 +359,7 @@ and select what and how many components are available.
 
 .Mesa Configuration
 
-image::images/pncconf-mesa-config.png[]
+image::pncconf-mesa-config.png[]
 
 Parport address is used only with Mesa parport card, the 7i43. An onboard 
 parallel port usually uses 0x278 or 0x378 though you should be able to find the 
@@ -413,7 +416,7 @@ PNCconf allows one to create custom signal names for use in custom HAL files.
 
 .Mesa I/O C2
 
-image::images/pncconf-mesa-io2.png[]
+image::pncconf-mesa-io2.png[]
 
 On this tab with this firmware the components are setup for a 7i33 daughter 
 board, usually used with closed loop servos. Note the component numbers of the 
@@ -422,7 +425,7 @@ daughter board requirements.
 
 .Mesa I/O C3
 
-image::images/pncconf-mesa-io3.png[]
+image::pncconf-mesa-io3.png[]
 
 On this tab all the pins are GPIO. Note the 3 digit numbers - they will match 
 the HAL pin number. GPIO pins can be selected as input or output and can be 
@@ -430,7 +433,7 @@ inverted.
 
 .Mesa I/O C4
 
-image::images/pncconf-mesa-io4.png[]
+image::pncconf-mesa-io4.png[]
 
 On this tab there are a mix of step generators and GPIO.
 Step generators output and direction pins can be inverted. Note that inverting a
@@ -439,7 +442,7 @@ what your controller expects.
 
 == Parport configuration
 
-image::images/pncconf-parport.png[]
+image::pncconf-parport.png[]
 
 The parallel port can be used for simple I/O similar to Mesa's GPIO pins.
 
@@ -447,7 +450,7 @@ The parallel port can be used for simple I/O similar to Mesa's GPIO pins.
 
 .Axis Drive Configuration
 
-image::images/pncconf-axis-drive.png[]
+image::pncconf-axis-drive.png[]
 
 This page allows configuring and testing of the motor and/or encoder combination
 . If using a servo motor an open loop test is available, if using a stepper a 
@@ -554,7 +557,7 @@ more help.
 
 .Axis Scale Calculation
 
-image::images/pncconf-scale-calc.png[]
+image::pncconf-scale-calc.png[]
 
 The scale settings can be directly entered or one can use the 'calculate scale' 
 button to assist. Use the check boxes to select appropriate calculations. Note 
@@ -565,7 +568,7 @@ scale press apply otherwise push cancel and enter the scale directly.
 
 .Axis Configuration
 
-image::images/pncconf-axis-config.png[]
+image::pncconf-axis-config.png[]
 
 Also refer to the diagram tab for two examples of
 home and limit switches. These are two examples of
@@ -746,7 +749,7 @@ Use Backlash Compensation::
 
 .AXIS Help Diagram
 
-image::images/pncconf-diagram-lathe.png[]
+image::pncconf-diagram-lathe.png[]
 
 The diagrams should help to demonstrate an example of limit switches and 
 standard axis movement directions.
@@ -770,7 +773,7 @@ selected on previous pages!
 
 .Spindle Configuration
 
-image::images/pncconf-spindle-config.png[]
+image::pncconf-spindle-config.png[]
 
 This page is similar to the axis motor configuration page.
 
@@ -817,7 +820,7 @@ classicladder for serial modbus. See the classicladder section in the manual.
   
 .Advanced Options
 
-image::images/pncconf-advanced.png[]
+image::pncconf-advanced.png[]
 
 == HAL Components
 
@@ -828,7 +831,7 @@ allowing user needed components.
 
 .HAL Components
 
-image::images/pncconf-hal.png[]
+image::pncconf-hal.png[]
 
 The first selection is components that pncconf uses internally.
 You may configure pncconf to load extra instances of the components for your 
@@ -929,5 +932,3 @@ standalone PYVCP display loads.
 * shutdown.hal is for commands to run when Machinekit shuts down in a controlled manner.
 
 // vim: set syntax=asciidoc:
-
-
