--- a/docs/config/stepconf.asciidoc
+++ b/docs/config/stepconf.asciidoc
@@ -1,3 +1,6 @@
+
+:imagesdir: config/images
+
 = Stepper Configuration Wizard
 
 [[cha:stepconf-wizard]] (((Stepconf Wizard)))
@@ -28,7 +31,7 @@ Step by Step Instructions
 
 .Entry Page[[cap:Entry-Page]]
 
-image::images/stepconf-config.png[align="center"]
+image::stepconf-config.png[align="center"]
 
 * 'Create New' - Creates a fresh configuration.
 
@@ -54,7 +57,7 @@ even if you don't have the actual hardware.
 
 .Basic Information Page[[cap:Basic-Information-Page]]
 
-image::images/stepconf-basic.png[align="center"]
+image::stepconf-basic.png[align="center"]
 
 * 'Machine Name' - Choose a name for your machine. Use only uppercase letters,
 lowercase letters, digits, - and _.
@@ -134,7 +137,7 @@ whether you use software stepping or not.
 
 .Parallel Port Setup Page[[cap:Parallel-Port-Setup]]
 
-image::images/stepconf-pinout.png[align="center"]
+image::stepconf-pinout.png[align="center"]
 You may specify the address as a hexidecimal (often 0x378) or as linux's default
  port number (probably 0)
 
@@ -166,7 +169,7 @@ step rate shown on the Basic Machine Configuration page.
 
 .Parallel Port 2 Setup Page[[cap:Parallel-Port-2-Setup]]
 
-image::images/stepconf-parport2.png[align="center"]
+image::stepconf-parport2.png[align="center"]
 
 The second Parallel port (if selected) can be configured and It's pins
 assigned on this page. +
@@ -180,7 +183,7 @@ You may specify the address as a hexidecimal (often 0x278) or as linux's default
 
 .Axis Configuration Page[[cap:Axis-Configuration-Page]]
 
-image::images/stepconf-axis.png[align="center"]
+image::stepconf-axis.png[align="center"]
 
 * 'Motor Steps Per Revolution' - The number of full steps per motor revolution.
 If you know how many degrees per step the motor is (e.g., 1.8 degree), then
@@ -261,7 +264,7 @@ This can be used after filling out all the information for this axis.
 
 .Test This Axis[[cap:Test-This-Axis]]
 
-image::images/stepconf-test.png[align="center"]
+image::stepconf-test.png[align="center"]
 
 Test this axis is a basic tester that only outputs step and direction signals
 to try different values for acceleration and velocity.
@@ -331,7 +334,7 @@ reduce it by 10% and use that as the axis Maximum Acceleration.
 
 .Spindle Configuration Page[[cap:Spindle-Configuration-Page]]
 
-image::images/stepconf-spindle.png[align="center"]
+image::stepconf-spindle.png[align="center"]
 
 This page only appears when 'Spindle PWM' is chosen in the
 'Parallel Port Pinout' page for one of the outputs.
@@ -422,7 +425,7 @@ then find the PWM values that give 1600 RPM (40%) and 2800 RPM (70%).
 
 .Advanced Configuration[[cap:Advanced-Configuration]]
 
-image::images/stepconf-advanced.png[align="center"]
+image::stepconf-advanced.png[align="center"]
 
 * 'Include Halui' - This will add the Halui user interface component. See the
 Integrator Manual for more information on Halui.
@@ -522,13 +525,13 @@ Typically for a parallel port you might use 47k.
 
 Wiring N/C switches in series (simplified diagram)
 
-image::images/switch-nc-series.png[align="center"]
+image::switch-nc-series.png[align="center"]
 
 .Normally Open Switches[[cap:Normally-Open-Switches]]
 
 Wiring N/O switches in parallel (simplified diagram)
 
-image::images/switch-no-parallel.png[align="center"]
+image::switch-no-parallel.png[align="center"]
 
 The following combinations of switches are permitted in Stepconf:
 
@@ -539,5 +542,3 @@ The following combinations of switches are permitted in Stepconf:
 * Combine one limit switch and the home switch for one axis
 
 // vim: set syntax=asciidoc:
-
-
