--- a/docs/drivers/pluto_p.asciidoc
+++ b/docs/drivers/pluto_p.asciidoc
@@ -1,3 +1,6 @@
+
+:imagesdir: drivers/images
+
 = Pluto P Driver
 
 [[cha:pluto-p-driver]] (((Pluto P Driver)))
@@ -287,5 +290,3 @@ image::images/pluto_step_waveform.png[align="center"]
 
 A list of all 'loadrt' arguments, HAL function names, pin names and
 parameter names is in the manual page, 'pluto_step.9'.
-
-
