--- a/docs/hal/halshow.asciidoc
+++ b/docs/hal/halshow.asciidoc
@@ -1,3 +1,6 @@
+
+:imagesdir: hal/images
+
 = Halshow
 
 [[cha:halshow]] (((Halshow)))
@@ -26,7 +29,7 @@ the right is a tabbed notebook with tabs for show and watch.
 
 .Halshow Layout[[cap:Halshow-Layout]]
 
-image::images/halshow-1.png[align="center"]
+image::halshow-1.png[align="center"]
 
 The tree shows all of the major parts of a HAL. In front of each is a
 small plus (+) or minus (-) sign in a box. Clicking the plus will
@@ -41,7 +44,7 @@ previously set watches, you cannot erase just one watch.)
 
 .Show Menu[[cap:Show-Menu]]
 
-image::images/halshow-3.png[align="center"]
+image::halshow-3.png[align="center"]
 
 == HAL Show Area
 
@@ -163,7 +166,7 @@ halshow after this command has been issued.
 
 .Addf Command[[cap:Addf-Command]]
 
-image::images/halshow-2.png[align="center"]
+image::halshow-2.png[align="center"]
 
 Next we need to connect this block to something. But how do we know
 what pins are available? The answer is to look under pins. There we
@@ -235,7 +238,7 @@ true until the machine has been turned on.
 
 .[[cap:Watch-Display]]Watch Display
 
-image::images/halshow-4.png[align="center"]
+image::halshow-4.png[align="center"]
 
 Watch displays bit type (binary) values using colored circles
 representing LEDs. They show as dark brown when a bit signal or pin is
@@ -249,5 +252,3 @@ Watch's refresh rate is a bit slow to see stepper pulses, but you can
 use it for these if you move an axis very slowly or in very small
 increments of distance. If you've used IO_Show in Machinekit, the watch page
 in halshow can be set up to watch a parport much as IO_Show did.
-
-
