--- a/docs/hal/parallel_port.asciidoc
+++ b/docs/hal/parallel_port.asciidoc
@@ -1,3 +1,6 @@
+
+:imagesdir: hal/images
+
 = Parallel Port Driver
 
 [[cha:Parport]] (((Parallel Port Driver)))
@@ -103,7 +106,7 @@ address, it is an error.
 
 .Parport Block Diagram
 
-image::images/parport-block-diag.png[align="center"]
+image::parport-block-diag.png[align="center"]
 
 === Pins
 
@@ -252,5 +255,3 @@ parport: PnPBIOS parport detected.
 
 when the parport_pc module is loaded ('sudo modprobe -a parport_pc;
 sudo rmmod parport_pc)' then use of this module is probably required.
-
-
